// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-aspect-ratio css-owceb3"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
>
  <img
    alt="Snow"
    class="css-9zw39p"
  />
  <div
    aria-hidden="true"
    class="css-1wfnuwc"
  />
</div>
`;

exports[`props should render with custom ratio 1`] = `
<div
  class="wp-components-aspect-ratio css-owceb3"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
>
  <img
    alt="Snow"
    class="css-9zw39p"
  />
  <div
    aria-hidden="true"
    class="css-eul5hi"
  />
</div>
`;

exports[`props should render with custom width 1`] = `
<div
  class="wp-components-aspect-ratio css-j950ew"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
>
  <img
    alt="Snow"
    class="css-9zw39p"
  />
  <div
    aria-hidden="true"
    class="css-1csetj1"
  />
</div>
`;
